--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,90 @@
-h1{
-    text-align: center;
+@import '/css/typograpy.css';
+
+body{
+    background-color: #ffffff;
+    margin: 0 auto;
+}
+
+header{
+    width: 100%;
+    height: 33px;
+    background-color: #ff7f00;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.search{
+    height: 84px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+input[name="search"] {
+    box-sizing: border-box;
+    border: transparent;
+    border-bottom: 2px solid gray;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: transparent;
+    background-image: url('/graphics/search-icon.png');
+    background-repeat: no-repeat;
+    background-size: 10px 10px;
+    padding-left: 20px;
+    font-size: 9.5px;
+    font-family: Montserrat;
+    font-weight: 500;
+}
+
+input[name="search"] img{
+    height: 10px;
+    width: 10px;
+}
+
+.search-box{
+    color: transparent;
+    /* padding-left: 26.1px; */
+}
+
+.keywords{
+    /* width: 205px; */
+    height: 29px;
+    /* background-color: bisque; */
+    color: black;
+    font-size: 9.5px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    font-family: Montserrat;
+    color: #040a2c;
+}
+
+.keywords span{
+    cursor: pointer;
+}
+
+
+.logo{
+    width: 66px;
+    height: 11px;
+    margin-left: 25px;
+}
+
+
+.layout{
+    width: 600px;
 }
 
 .main-container{
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-around;
     margin: auto;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .main-canvas{
@@ -15,14 +92,13 @@ h1{
 }
 
 .main-gallery{
-    color:red;
     /* height: 500px; */
     width: 500px;
-    border: 1px solid red;
     text-align: center;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    background-color: #e3e3e3;
 }
 
 .gallery{
@@ -41,9 +117,6 @@ h1{
 }
 
 .tools{
-    height: 250px;
-    width: 500px;
-    border: 2px dashed #000000;
     display: flex;
     flex-direction: column;
     gap: 10px;
