--- a/css/typograpy.css
+++ b/css/typograpy.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: Montserrat;
-    src: url(/fonts/Montserrat-VariableFont_wght.ttf);
+    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
 }
