--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,24 @@
 header{
+    position: fixed;
     width: 100%;
     height: 33px;
     background-color: #ff7f00;
     display: flex;
     flex-direction: row;
     align-items: center;
+    z-index: 1;
 }
 
 .search{
     height: 84px;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    opacity: 50%;
+    padding-top: 50px;
+    z-index: 0;
 }
 
 input[name="search"] {
@@ -65,4 +70,11 @@ input[name="search"] img{
     width: 66px;
     height: 11px;
     margin-left: 25px;
+}
+
+@media (min-width: 990px) {
+    .search{
+        flex-direction: row;
+        padding-top: 25px;
+    }
 }
